--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 golang-github-etcd-io-etcd (3.5.16-1) UNRELEASED; urgency=medium
 
-  * Initial release (Closes: TODO)
+  * Debianize
 
- -- TODO <TODO>  Tue, 24 Sep 2024 10:19:55 +0000
+ -- André Roth <neolynx@gmail.com>  Tue, 24 Sep 2024 12:27:06 +0200
