--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-go-etcd-io-etcd (3.5.16-1) UNRELEASED; urgency=medium
+go-etcd-io-etcd (3.5.16-2) UNRELEASED; urgency=medium
 
   * Debianize
+  * rename
 
- -- André Roth <neolynx@gmail.com>  Tue, 24 Sep 2024 12:27:06 +0200
+ -- André Roth <neolynx@gmail.com>  Tue, 24 Sep 2024 12:38:16 +0200
